style: Modification de la page des films

--- a/my_project_directory/templates/movie/index.html.twig
+++ b/my_project_directory/templates/movie/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Bibliothèque de Films{% endblock %}
+{% block title %}Bibliothèque de Movies{% endblock %}
 
 {% block body %}
     <div class="movie-dashboard">
